--- a/server/package.json
+++ b/server/package.json
@@ -1,26 +1,1 @@
-{
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "cors": "^2.8.6",
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "mysql2": "^3.17.2",
-    "sequelize": "^6.37.7"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/node": "^25.3.0",
-    "nodemon": "^3.1.11",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
-  }
-}
+{"name":"server","version":"1.0.0","type":"module","scripts":{"dev":"tsx watch src/index.ts","build":"tsc","start":"node dist/index.js"},"keywords":[],"author":"","license":"ISC","dependencies":{"cors":"^2.8.6","dotenv":"^17.3.1","express":"^5.2.1","mysql2":"^3.17.2","sequelize":"^6.37.7"},"devDependencies":{"@types/express":"^5.0.6","@types/node":"^25.3.0","nodemon":"^3.1.11","ts-node-dev":"^2.0.0","tsx":"^4.21.0","typescript":"^5.9.3"}}
