chore: update environment template

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-PORT= 
-DB_HOST=
-DB_USER=
-DB_PASS=
-DB_NAME=
+# Server Config
+PORT=8000
+
+# Database Config (MySQL)
+DB_HOST=localhost
+DB_USER=root
+DB_PASS=your_password_here
+DB_NAME=kanban_db
