implement code rabbit suggestions

--- a/server/.env.example
+++ b/server/.env.example
@@ -19,9 +19,16 @@ DB_NAME=kanban_db
 
 # ── Railway MySQL (production — set these in Railway dashboard) ──
 # Railway injects all MYSQL* vars automatically when you attach a MySQL plugin.
-# You only need to set them here if running Railway's DB locally via a tunnel.
 #
-# MYSQL_URL=mysql://root:password@host:port/railway
+# MYSQL_PUBLIC_URL is checked FIRST by connection.ts.
+# Use it when connecting from your local machine to Railway's DB via the public proxy.
+# MYSQL_PUBLIC_URL=mysql://user:password@host:port/database
+#
+# MYSQL_URL is the private/internal URL — only reachable inside Railway containers.
+# Leave it unset locally; Railway injects it automatically at runtime.
+# MYSQL_URL=mysql://root:password@mysql.railway.internal:3306/railway
+#
+# These individual vars are also injected by Railway's MySQL plugin:
 # MYSQLHOST=
 # MYSQLUSER=root
 # MYSQLPASSWORD=
