--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,39 @@
-# Logs
-logs
+# ── Dependencies ───────────────────────────────────────
+node_modules/
+
+# ── Build outputs ──────────────────────────────────────
+dist/
+dist-ssr/
+build/
+client/dist/
+server/dist/
+
+# ── Environment files (NEVER commit secrets) ───────────
+.env
+.env.local
+.env.production
+.env.*.local
+*.local
+
+# ── Logs ───────────────────────────────────────────────
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# ── Editor & OS ────────────────────────────────────────
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
 
-.env
-.env.local
+# ── TypeScript incremental cache ───────────────────────
+*.tsbuildinfo
